not persisting but no errors